--- a/index.html
+++ b/index.html
@@ -4,9 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <title>Admin Dashboard page</title>
 </head>
 <body>
     
+    <div class="site-content">
+
+        <div class="dashboard-leftside" id="dashboard-leftside">
+            <div class="dashboard-flexcolumn">
+                <div class="dashboard-iconAndLogo">
+                    <img src="img/view-dashboard.svg" id="dashboard-icon" alt="">
+                    <h1>Dashboard</h1>
+                </div>
+
+                <div class="dashboard-buttons">
+
+                    <div class="dashboard-button-single">
+                        <img src="img/home.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Home</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/card-account-details-outline.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Profile</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/message-reply-outline.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Messages</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/clock-time-three-outline.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">History</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/note-multiple-outline.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Tasks</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/account-group.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Communities</p>
+                    </div>
+                </div>
+
+                <div class="dashboard-support-buttons">
+                    <div class="dashboard-button-single">
+                        <img src="img/cog.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Settings</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/help-box-outline.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Support</p>
+                    </div>
+                    <div class="dashboard-button-single">
+                        <img src="img/shield-star.svg" class="dashboard-icon" alt="">
+                        <p class="dashboard-text">Privacy</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="header-section" id="header-section">
+            <div class="header-upper">
+                <div class="header-upper-left" id="header-upper-left">
+                    <div class="searchbar">
+                        <img src="img/magnify.svg" class="icon" alt="">
+                        <input type="search" class="search" placeholder="Search...">
+                    </div>
+                </div>
+
+                <div class="header-upper-right" id="header-upper-right">
+                    <img src="img/bell-ring.svg" class="icon" alt="">
+                    <img src="img/profile-picture.jpg" class="profile-picture-small" alt="Profile picture">
+                    <p class="profile-section">Morgan Oakley</p>
+                </div>
+            </div>
+
+            <div class="header-lower">
+                <div class="header-lower-left">
+                    <img src="img/profile-picture.jpg" class="profile-picture-big" alt="cat-picture">
+                    <div class="header-lower-left-column">
+                        <p class="header-subtext">Hi there,</p>
+                        <p class="header-text">Morgan Oakley (@morgan)</p>
+                    </div>
+                </div>
+
+                <div class="header-lower-right">
+                    <button class="header-button">New</button>
+                    <button class="header-button">Upload</button>
+                    <button class="header-button">Share</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="main-section" id="main-section">
+
+        </div>
+
+    </div>
+
 </body>
 </html>
