Added almost all necessary elelements, still some issues with total grid area when zooming. Version 0.9

--- a/index.html
+++ b/index.html
@@ -100,7 +100,70 @@
 
 
         <div class="main-section" id="main-section">
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+            <div class="text-card">
+                <h3 class="card-header">Super cool project</h3>
+                <p class="card-text">Test text Test text Test text Test text Test text Test text.</p>
+            </div>
+        </div>
 
+
+        <div class="info-section" id="info-section">
+            <h4 class="info-header">Announcements</h4>
+            <div class="announcements">
+                <div class="info-announcement-item">
+                    <h5 class="announcements-subheader">Site maintenance</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
+                <div class="info-announcement-item">
+                    <h5 class="announcements-subheader">Community Share Day</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
+                <div class="info-announcement-item">
+                    <h5 class="announcements-subheader">Updated Privacy Policy</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </div>
+                
+            </div>
+
+            <h4 class="info-header">Trending</h4>
+            <div class="trending">
+                <div class="trending-item">
+                    <img class="trending-image" src="img/profile-picture.jpg" alt="">
+                    <p class="trending-text">Lorem ipsum dolor</p>
+                </div>
+                <div class="trending-item">
+                    <img class="trending-image" src="img/profile-picture.jpg" alt="">
+                    <p class="trending-text">Lorem ipsum dolor</p>
+                </div>
+                <div class="trending-item">
+                    <img class="trending-image" src="img/profile-picture.jpg" alt="">
+                    <p class="trending-text">Lorem ipsum dolor</p>
+                </div>
+            </div>
         </div>
 
     </div>
